Uploaded image for project: 'Apache Arrow'
  1. Apache Arrow
  2. ARROW-8568

[C++][Python] Crash on decimal cast in debug mode

    XMLWordPrintableJSON

Details

    Description

      >>> arr = pa.array([Decimal('123.45')])                                                                                                                                   
      >>> arr                                                                                                                                                                   
      <pyarrow.lib.Decimal128Array object at 0x7efbbddd4210>
      [
        123.45
      ]
      >>> arr.type                                                                                                                                                              
      Decimal128Type(decimal(5, 2))
      >>> arr.cast(pa.decimal128(4, 2))                                                                                                                                         
      ../src/arrow/util/basic_decimal.cc:626:  Check failed: (original_scale) != (new_scale) 
      

      Attachments

        Issue Links

          Activity

            People

              apitrou Antoine Pitrou
              apitrou Antoine Pitrou
              Votes:
              0 Vote for this issue
              Watchers:
              4 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0h
                  0h
                  Logged:
                  Time Spent - 1h 40m
                  1h 40m