ARROW-8568: [C++] Fix decimal to decimal cast issues

- Allow same-scale casts
- Detect truncation when target precision is too small