cpp/src/arrow/compute/kernels/scalar_cast_numeric.cc
@@ -309,6 +309,60 @@ struct CastFunctor<O, I, enable_if_base_binary<I>> {
 // ----------------------------------------------------------------------
 // Decimal to integer
 
+struct DecimalToIntegerMixin {
+  template <typename OUT>
+  OUT ToInteger(KernelContext* ctx, const Decimal128& val) const {
+    constexpr auto min_value = std::numeric_limits<OUT>::min();
+    constexpr auto max_value = std::numeric_limits<OUT>::max();
+
+    if (!allow_int_overflow_ && ARROW_PREDICT_FALSE(val < min_value || val > max_value)) {
+      ctx->SetStatus(Status::Invalid("Integer value out of bounds"));
+      return OUT{};  // Zero
+    } else {
+      return static_cast<OUT>(val.low_bits());
+    }
+  }
+
+  DecimalToIntegerMixin(int32_t in_scale, bool allow_int_overflow)
+      : in_scale_(in_scale), allow_int_overflow_(allow_int_overflow) {}
+
+  int32_t in_scale_;
+  bool allow_int_overflow_;
+};
+
+struct UnsafeUpscaleDecimalToInteger : public DecimalToIntegerMixin {
+  using DecimalToIntegerMixin::DecimalToIntegerMixin;
+
+  template <typename OUT, typename ARG0>
+  OUT Call(KernelContext* ctx, Decimal128 val) const {
+    return ToInteger<OUT>(ctx, val.IncreaseScaleBy(-in_scale_));
+  }
+};
+
+struct UnsafeDownscaleDecimalToInteger : public DecimalToIntegerMixin {
+  using DecimalToIntegerMixin::DecimalToIntegerMixin;
+
+  template <typename OUT, typename ARG0>
+  OUT Call(KernelContext* ctx, Decimal128 val) const {
+    return ToInteger<OUT>(ctx, val.ReduceScaleBy(in_scale_, false));
+  }
+};
+
+struct SafeRescaleDecimalToInteger : public DecimalToIntegerMixin {
+  using DecimalToIntegerMixin::DecimalToIntegerMixin;
+
+  template <typename OUT, typename ARG0>
+  OUT Call(KernelContext* ctx, Decimal128 val) const {
+    auto result = val.Rescale(in_scale_, 0);
+    if (ARROW_PREDICT_FALSE(!result.ok())) {
+      ctx->SetStatus(result.status());
+      return OUT{};  // Zero
+    } else {
+      return ToInteger<OUT>(ctx, *result);
+    }
+  }
+};
+
 template <typename O>
 struct CastFunctor<O, Decimal128Type, enable_if_t<is_integer_type<O>::value>> {
   using out_type = typename O::c_type;
@@ -317,77 +371,69 @@ struct CastFunctor<O, Decimal128Type, enable_if_t<is_integer_type<O>::value>> {
     const auto& options = checked_cast<const CastState*>(ctx->state())->options;
 
     const ArrayData& input = *batch[0].array();
-    ArrayData* output = out->mutable_array();
-
     const auto& in_type_inst = checked_cast<const Decimal128Type&>(*input.type);
-    auto in_scale = in_type_inst.scale();
-
-    auto out_data = output->GetMutableValues<out_type>(1);
-
-    constexpr auto min_value = std::numeric_limits<out_type>::min();
-    constexpr auto max_value = std::numeric_limits<out_type>::max();
-    constexpr auto zero = out_type{};
+    const auto in_scale = in_type_inst.scale();
 
     if (options.allow_decimal_truncate) {
       if (in_scale < 0) {
         // Unsafe upscale
-        auto convert_value = [&](util::optional<util::string_view> v) {
-          *out_data = zero;
-          if (v.has_value()) {
-            auto dec_value = Decimal128(reinterpret_cast<const uint8_t*>(v->data()));
-            auto converted = dec_value.IncreaseScaleBy(-in_scale);
-            if (!options.allow_int_overflow &&
-                ARROW_PREDICT_FALSE(converted < min_value || converted > max_value)) {
-              ctx->SetStatus(Status::Invalid("Integer value out of bounds"));
-            } else {
-              *out_data = static_cast<out_type>(converted.low_bits());
-            }
-          }
-          ++out_data;
-        };
-        VisitArrayDataInline<Decimal128Type>(input, std::move(convert_value));
+        codegen::ScalarUnaryNotNullStateful<O, Decimal128Type,
+                                            UnsafeUpscaleDecimalToInteger>
+            kernel(UnsafeUpscaleDecimalToInteger{in_scale, options.allow_int_overflow});
+        return kernel.Exec(ctx, batch, out);
       } else {
         // Unsafe downscale
-        auto convert_value = [&](util::optional<util::string_view> v) {
-          *out_data = zero;
-          if (v.has_value()) {
-            auto dec_value = Decimal128(reinterpret_cast<const uint8_t*>(v->data()));
-            auto converted = dec_value.ReduceScaleBy(in_scale, false);
-            if (!options.allow_int_overflow &&
-                ARROW_PREDICT_FALSE(converted < min_value || converted > max_value)) {
-              ctx->SetStatus(Status::Invalid("Integer value out of bounds"));
-            } else {
-              *out_data = static_cast<out_type>(converted.low_bits());
-            }
-          }
-          ++out_data;
-        };
-        VisitArrayDataInline<Decimal128Type>(input, std::move(convert_value));
+        codegen::ScalarUnaryNotNullStateful<O, Decimal128Type,
+                                            UnsafeDownscaleDecimalToInteger>
+            kernel(UnsafeDownscaleDecimalToInteger{in_scale, options.allow_int_overflow});
+        return kernel.Exec(ctx, batch, out);
       }
     } else {
       // Safe rescale
-      auto convert_value = [&](util::optional<util::string_view> v) {
-        *out_data = zero;
-        if (v.has_value()) {
-          auto dec_value = Decimal128(reinterpret_cast<const uint8_t*>(v->data()));
-          auto result = dec_value.Rescale(in_scale, 0);
-          if (ARROW_PREDICT_FALSE(!result.ok())) {
-            ctx->SetStatus(result.status());
-          } else {
-            auto converted = *std::move(result);
-            if (!options.allow_int_overflow &&
-                ARROW_PREDICT_FALSE(converted < min_value || converted > max_value)) {
-              ctx->SetStatus(Status::Invalid("Integer value out of bounds"));
-            } else {
-              *out_data = static_cast<out_type>(converted.low_bits());
-            }
-          }
-        }
-        ++out_data;
-      };
-      VisitArrayDataInline<Decimal128Type>(input, std::move(convert_value));
+      codegen::ScalarUnaryNotNullStateful<O, Decimal128Type, SafeRescaleDecimalToInteger>
+          kernel(SafeRescaleDecimalToInteger{in_scale, options.allow_int_overflow});
+      return kernel.Exec(ctx, batch, out);
     }
   }
+};
+
+// ----------------------------------------------------------------------
+// Decimal to decimal
+
+struct UnsafeUpscaleDecimal {
+  template <typename... Unused>
+  Decimal128 Call(KernelContext* ctx, Decimal128 val) const {
+    return val.IncreaseScaleBy(out_scale_ - in_scale_);
+  }
+
+  int32_t out_scale_, in_scale_;
+};
+
+struct UnsafeDownscaleDecimal {
+  template <typename... Unused>
+  Decimal128 Call(KernelContext* ctx, Decimal128 val) const {
+    return val.ReduceScaleBy(in_scale_ - out_scale_, false);
+  }
+
+  int32_t out_scale_, in_scale_;
+};
+
+struct SafeRescaleDecimal {
+  template <typename... Unused>
+  Decimal128 Call(KernelContext* ctx, Decimal128 val) const {
+    auto result = val.Rescale(in_scale_, out_scale_);
+    if (ARROW_PREDICT_FALSE(!result.ok())) {
+      ctx->SetStatus(result.status());
+      return Decimal128();  // Zero
+    } else if (ARROW_PREDICT_FALSE(!(*result).FitsInPrecision(out_precision_))) {
+      ctx->SetStatus(Status::Invalid("Decimal value does not fit in precision"));
+      return Decimal128();  // Zero
+    } else {
+      return *std::move(result);
+    }
+  }
+
+  int32_t out_scale_, out_precision_, in_scale_;
 };
 
 template <>
@@ -396,59 +442,33 @@ struct CastFunctor<Decimal128Type, Decimal128Type> {
     const auto& options = checked_cast<const CastState*>(ctx->state())->options;
     const ArrayData& input = *batch[0].array();
     ArrayData* output = out->mutable_array();
-    auto out_data = output->GetMutableValues<uint8_t>(1);
 
     const auto& in_type_inst = checked_cast<const Decimal128Type&>(*input.type);
     const auto& out_type_inst = checked_cast<const Decimal128Type&>(*output->type);
-    auto in_scale = in_type_inst.scale();
-    auto out_scale = out_type_inst.scale();
-
-    const auto write_zero = [](uint8_t* out_data) { memset(out_data, 0, 16); };
+    const auto in_scale = in_type_inst.scale();
+    const auto out_scale = out_type_inst.scale();
+    const auto out_precision = out_type_inst.precision();
 
     if (options.allow_decimal_truncate) {
       if (in_scale < out_scale) {
         // Unsafe upscale
-        auto convert_value = [&](util::optional<util::string_view> v) {
-          if (v.has_value()) {
-            auto dec_value = Decimal128(reinterpret_cast<const uint8_t*>(v->data()));
-            dec_value.IncreaseScaleBy(out_scale - in_scale).ToBytes(out_data);
-          } else {
-            write_zero(out_data);
-          }
-          out_data += 16;
-        };
-        VisitArrayDataInline<Decimal128Type>(input, std::move(convert_value));
+        codegen::ScalarUnaryNotNullStateful<Decimal128Type, Decimal128Type,
+                                            UnsafeUpscaleDecimal>
+            kernel(UnsafeUpscaleDecimal{out_scale, in_scale});
+        return kernel.Exec(ctx, batch, out);
       } else {
         // Unsafe downscale
-        auto convert_value = [&](util::optional<util::string_view> v) {
-          if (v.has_value()) {
-            auto dec_value = Decimal128(reinterpret_cast<const uint8_t*>(v->data()));
-            dec_value.ReduceScaleBy(in_scale - out_scale, false).ToBytes(out_data);
-          } else {
-            write_zero(out_data);
-          }
-          out_data += 16;
-        };
-        VisitArrayDataInline<Decimal128Type>(input, std::move(convert_value));
+        codegen::ScalarUnaryNotNullStateful<Decimal128Type, Decimal128Type,
+                                            UnsafeDownscaleDecimal>
+            kernel(UnsafeDownscaleDecimal{out_scale, in_scale});
+        return kernel.Exec(ctx, batch, out);
       }
     } else {
       // Safe rescale
-      auto convert_value = [&](util::optional<util::string_view> v) {
-        if (v.has_value()) {
-          auto dec_value = Decimal128(reinterpret_cast<const uint8_t*>(v->data()));
-          auto result = dec_value.Rescale(in_scale, out_scale);
-          if (ARROW_PREDICT_FALSE(!result.ok())) {
-            ctx->SetStatus(result.status());
-            write_zero(out_data);
-          } else {
-            (*std::move(result)).ToBytes(out_data);
-          }
-        } else {
-          write_zero(out_data);
-        }
-        out_data += 16;
-      };
-      VisitArrayDataInline<Decimal128Type>(input, std::move(convert_value));
+      codegen::ScalarUnaryNotNullStateful<Decimal128Type, Decimal128Type,
+                                          SafeRescaleDecimal>
+          kernel(SafeRescaleDecimal{out_scale, out_precision, in_scale});
+      return kernel.Exec(ctx, batch, out);
     }
   }
 };
@@ -484,7 +504,6 @@ std::shared_ptr<CastFunction> GetCastToInteger(std::string name) {
   AddPrimitiveNumberCasts<OutType>(out_ty, func.get());
 
   // From decimal to integer
-  // TODO: Refactor to support casting decimal scalars to integer
   DCHECK_OK(func->AddKernel(Type::DECIMAL, {InputType::Array(Type::DECIMAL)}, out_ty,
                             CastFunctor<OutType, Decimal128Type>::Exec));
   return func;
