cpp/src/arrow/compute/kernels/vector_hash.cc
@@ -500,12 +500,15 @@ void AddHashKernels(VectorFunction* func, VectorKernel base,
 
   // Example parametric types that we want to match only on Type::type
   auto parametric_types = {time32(TimeUnit::SECOND), time64(TimeUnit::MICRO),
-                           timestamp(TimeUnit::SECOND), fixed_size_binary(0),
-                           decimal(12, 2)};
+                           timestamp(TimeUnit::SECOND), fixed_size_binary(0)};
   for (const auto& ty : parametric_types) {
     base.signature = KernelSignature::Make({InputType::Array(ty->id())}, out_ty);
     AddKernel<Action>(func, base, /*dummy=*/ty);
   }
+
+  // Handle Decimal as a physical string, not a number
+  base.signature = KernelSignature::Make({InputType::Array(Type::DECIMAL)}, out_ty);
+  AddKernel<Action>(func, base, fixed_size_binary(0));
 }
 
 }  // namespace
